# jag

./: README.md  pyproject.toml
src/jag/: main.py
