[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jag"
version = "0.0.0"
authors = [
    {name = "Thomas Svensson", email = "thomas@tsvenson.com"},
]
description = "An application to organize and manage your personal assets and data, as well as to better collaborate with others."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["organizer", "console"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "slim @ git+https://github.com/ShazbotLabs/slim.git",
    "mindy @ git+https://github.com/ShazbotLabs/mindy.git",
]

[project.scripts]
jag = "jag.main:app"

[project.urls]
homepage = "https://github.com/indikoj/jag"
